MDEV-7017: Add function to print semaphore waits

Add function to print to stderr all current semaphore 
waits. This function should be able to executed 
inside a gdb/ddd.