storage/innobase/include/sync0arr.h
@@ -138,6 +138,12 @@ sync_array_print_info(
 	sync_array_t*	arr);	/*!< in: wait array */
 
 
+/**********************************************************************//**
+Prints info of the wait array without using any mutexes/semaphores. */
+UNIV_INTERN
+void
+sync_array_print_innodb(void);
+
 #ifndef UNIV_NONINL
 #include "sync0arr.ic"
 #endif
